Added composer branch alias

--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,10 @@
 		"psr-4": {
 			"GMO\\DependencyInjection\\": "src/"
 		}
+	},
+	"extra": {
+		"branch-alias": {
+			"dev-master": "1-dev"
+		}
 	}
 }
